--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
   position: absolute;
   width: 100%;
   height: 2px;
-  background: linear-gradient(to right, #ffb007, #00ffff);
+  background: linear-gradient(to right, #3e3c3c, #fbc638);
   bottom: -5px;
   left: 0;
   transform: scaleX(0);
@@ -101,7 +101,7 @@ body {
 
 .cta:hover {
   transition: 0.5s;
-  box-shadow: 10px 10px 0 #FBC638;
+  box-shadow: 10px 10px 0 #fbc638;
 }
 
 .cta span:nth-child(2) {
@@ -158,10 +158,143 @@ path.two {
     fill: white;
   }
   50% {
-    fill: #FBC638;
+    fill: #fbc638;
   }
   100% {
     fill: white;
 
   }
 }
+
+nav {
+  background: #eee;
+  margin-block: 16px;
+  @media screen and (min-width: 768px) {
+    width: 30%;
+  }
+}
+
+nav ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+nav li {
+  float: none;
+  width: 100%;
+}
+
+nav li a {
+  display: block;
+  width: 100%;
+  padding: 20px;
+  border-left: 5px solid;
+  position: relative;
+  z-index: 2;
+  text-decoration: none;
+  color: #444;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+
+nav li a:hover {
+  border-bottom: 0px;
+  color: #000000;
+}
+
+nav li:first-child a {
+  border-left: 10px solid #3e3c3c;
+}
+
+nav li:nth-child(2) a {
+  border-left: 10px solid #3e3c3c;
+}
+
+nav li:nth-child(3) a {
+  border-left: 10px solid #3e3c3c;
+}
+
+nav li:nth-child(4) a {
+  border-left: 10px solid #3e3c3c;
+}
+
+nav li:nth-child(5) a {
+  border-left: 10px solid #3e3c3c;
+}
+
+nav li:last-child a {
+  border-left: 10px solid #3e3c3c;
+}
+
+nav li a:after {
+  content: "";
+  height: 100%;
+  left: 0;
+  top: 0;
+  width: 0px;
+  position: absolute;
+  transition: all 0.3s ease 0s;
+  -webkit-transition: all 0.3s ease 0s;
+  z-index: -1;
+}
+
+nav li a:hover:after {
+  width: 100%;
+}
+
+nav li:first-child a:after {
+  background: #fbc638;
+}
+
+nav li:nth-child(2) a:after {
+  background: #fbc638;
+}
+
+nav li:nth-child(3) a:after {
+  background: #fbc638;
+}
+
+nav li:nth-child(4) a:after {
+  background: #fbc638;
+}
+
+nav li:nth-child(5) a:after {
+  background: #fbc638;
+}
+
+nav li:last-child a:after {
+  background: #fbc638;
+}
+
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 100;
+  src: local('Lato Hairline'), local('Lato-Hairline'), url(http://themes.googleusercontent.com/static/fonts/lato/v6/boeCNmOCCh-EWFLSfVffDg.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Lato Light'), local('Lato-Light'), url(http://themes.googleusercontent.com/static/fonts/lato/v6/KT3KS9Aol4WfR6Vas8kNcg.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Lato Regular'), local('Lato-Regular'), url(http://themes.googleusercontent.com/static/fonts/lato/v6/9k-RPmcnxYEPm8CNFsH2gg.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Lato Bold'), local('Lato-Bold'), url(http://themes.googleusercontent.com/static/fonts/lato/v6/wkfQbvfT_02e2IWO3yYueQ.woff) format('woff');
+}
+
+
