--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+img {
+  width: 100%;
+}
+
 h1 {
   text-align: center;
   text-shadow: 3px 3px 3px #919191;
@@ -14,6 +18,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+.container {
+  max-width: 1200px;
+}
+
 .card {
   display: flex;
   width: fit-content;
@@ -21,6 +29,10 @@ body {
   border: 1px solid #3e3c3c;
   border-radius: 16px;
   transition: all 0.3s;
+
+  img {
+    width: 70px;
+  }
 }
 
 .bolder {
@@ -41,8 +53,9 @@ body {
   padding: 0 16px;
 }
 
-
+/********************************************/
 /** -----------UNDERLINE EFFECT----------- **/
+/********************************************/
 
 .hover-underline {
   font-size: 2rem;
