--- a/style.css
+++ b/style.css
@@ -1,21 +1,38 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:900i');
 
+:root {
+  --primary-color: #f80a39;
+  --primary-gradient: linear-gradient(51.05deg, #EE2238 -57.1%, #BF1D67 156.72%);
+}
+
 * {
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+  margin-inline: 16px;
+  text-align: center;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: rgba(31, 41, 55);
+
+  @media screen and (min-width: 768px) {
+    margin: auto;
+  }
+}
+
 img {
   width: 100%;
+  border-radius: 16px;
 }
 
 h1 {
   text-align: center;
   text-shadow: 3px 3px 3px #919191;
   transition: color 0.3s
-}
-
-body {
-  font-family: "Roboto", sans-serif;
 }
 
 .container {
@@ -53,13 +70,45 @@ body {
   padding: 0 16px;
 }
 
+.separator {
+  width: 300px;
+  height: 1px;
+  background: #3e3c3c;
+  margin: 24px auto;
+}
+
+.mt-3 {
+  margin-top: 24px;
+}
+
+.mb-3 {
+  margin-bottom: 24px;
+}
+
+.primary-color {
+  color: var(--primary-color);
+}
+
+#logo-zenika {
+  width: 200px;
+}
+
+#decouverte ul {
+  width: fit-content;
+  text-align: left;
+  margin: 0 auto;
+}
+
+#apprentissage img {
+  width: 400px;
+}
+
 /********************************************/
 /** -----------UNDERLINE EFFECT----------- **/
 /********************************************/
 
 .hover-underline {
   font-size: 2rem;
-  color: #000000;
   position: relative;
   display: inline-block;
 }
@@ -70,7 +119,7 @@ body {
   position: absolute;
   width: 100%;
   height: 2px;
-  background: linear-gradient(to right, #3e3c3c, #fbc638);
+  background: var(--primary-gradient);
   bottom: -5px;
   left: 0;
   transform: scaleX(0);
@@ -88,7 +137,9 @@ body {
   transform: scaleX(1);
 }
 
+/*****************************************/
 /** -----------STYLED BUTTON----------- **/
+/*****************************************/
 
 .styled-button {
   display: flex;
@@ -114,7 +165,7 @@ body {
 
 .cta:hover {
   transition: 0.5s;
-  box-shadow: 10px 10px 0 #fbc638;
+  box-shadow: 10px 10px 0 var(--primary-color);
 }
 
 .cta span:nth-child(2) {
@@ -138,7 +189,9 @@ span:nth-child(2) {
   top: 12%;
 }
 
-/**************SVG****************/
+/*******************************/
+/** -----------svg----------- **/
+/*******************************/
 
 path.one {
   transition: 0.4s;
@@ -164,14 +217,14 @@ path.two {
   animation: color_anim 1s infinite 0.4s;
 }
 
-/* SVG animations */
+/******* SVG animations *******/
 
 @keyframes color_anim {
   0% {
     fill: white;
   }
   50% {
-    fill: #fbc638;
+    fill: var(--primary-color);
   }
   100% {
     fill: white;
@@ -179,18 +232,21 @@ path.two {
   }
 }
 
+/******* Nav *******/
 nav {
   background: #eee;
   margin-block: 16px;
+  width: 100%;
+
   @media screen and (min-width: 768px) {
-    width: 30%;
+    max-width: 400px;
   }
 }
 
 nav ul {
   list-style: none;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 nav li {
@@ -214,7 +270,7 @@ nav li a {
 
 nav li a:hover {
   border-bottom: 0px;
-  color: #000000;
+  color: white;
 }
 
 nav li:first-child a {
@@ -257,57 +313,11 @@ nav li a:hover:after {
   width: 100%;
 }
 
-nav li:first-child a:after {
-  background: #fbc638;
-}
-
-nav li:nth-child(2) a:after {
-  background: #fbc638;
-}
-
-nav li:nth-child(3) a:after {
-  background: #fbc638;
-}
-
-nav li:nth-child(4) a:after {
-  background: #fbc638;
-}
-
-nav li:nth-child(5) a:after {
-  background: #fbc638;
-}
-
+nav li:first-child a:after,
+nav li:nth-child(2) a:after,
+nav li:nth-child(3) a:after,
+nav li:nth-child(4) a:after,
+nav li:nth-child(5) a:after,
 nav li:last-child a:after {
-  background: #fbc638;
+  background: var(--primary-gradient);
 }
-
-
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Lato Hairline'), local('Lato-Hairline'), url(http://themes.googleusercontent.com/static/fonts/lato/v6/boeCNmOCCh-EWFLSfVffDg.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Lato Light'), local('Lato-Light'), url(http://themes.googleusercontent.com/static/fonts/lato/v6/KT3KS9Aol4WfR6Vas8kNcg.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Lato Regular'), local('Lato-Regular'), url(http://themes.googleusercontent.com/static/fonts/lato/v6/9k-RPmcnxYEPm8CNFsH2gg.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Lato Bold'), local('Lato-Bold'), url(http://themes.googleusercontent.com/static/fonts/lato/v6/wkfQbvfT_02e2IWO3yYueQ.woff) format('woff');
-}
-
-
